--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,93 @@
-.App {
-  text-align: center;
+body {
+  /* background: #eeeeee; */
+  font-family: "Permanent Marker", cursive;
+}
+.main-bg {
+  background: #ee5b60;
+}
+.main-color {
+  color: #ee5b60;
+}
+.main-bg:hover {
+  background: #ee6e73;
+}
+/* Showcase section */
+
+.showcase {
+  position: relative;
+  margin-top: 20px;
+  margin-bottom: 100px;
+  background: url("./img/big-logo1.jpg") no-repeat center/cover;
+  height: 60vh;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.5), 0 2px 3px rgba(0, 0, 0, 0.5);
+}
+.showcase:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background: radial-gradient(ellipse at 50px 10px, #ffffff 0%, #fff 5%, #cc61613d 85%);
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+.valign-wrapper {
+  height: 60vh;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.showcase .card {
+  background: unset;
+}
+.showcase .card-image img {
+  width: auto;
+  margin: 0 auto;
+  padding: 10% 20%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.showcase .card .card-image .card-title {
+  font-size: 34px;
+  font-weight: bold;
+  color: #000;
+  position: relative;
+  top: -10px;
+  padding: 0;
+}
+
+/* Main-content */
+#main-content {
+  position: relative;
+  background: url("./img/info-bg.jpg") no-repeat left 24% top 30%,
+    url("./img/info-bg3.jpg") no-repeat right 20% bottom 0;
+  border-top: 5px solid #ee5b60;
+  border-bottom: 5px solid #ee5b60;
+}
+#main-content:after {
+  content: "";
+  background: url("./img/left-side-frame.jpg") no-repeat left,
+    url("./img/right-side-frame.jpg") no-repeat right;
+  /* background-size: 16%; */
+  opacity: 0.3;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  position: absolute;
+  z-index: -1;
+}
+
+@media screen and (max-width: 1100px) {
+  #main-content {
+    background: unset;
   }
-  to {
-    transform: rotate(360deg);
-  }
+}
+
+/* Update Section */
+#update-section {
+  border-bottom: 5px solid #ee5b60;
+}
+
+/* Footer */
+#footer {
+  background: url("./img/info-bg2.jpg") no-repeat left 50% bottom -110px;
 }
