--- a/src/App.css
+++ b/src/App.css
@@ -101,9 +101,11 @@ body {
   margin-top: 50px;
   border: 1px solid #ccc;
   padding: 1rem;
+  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.12),
+    0 1px 5px 0 rgba(0, 0, 0, 0.2);
 }
 
-.human-race .img-wraper img {
+img {
   width: 100%;
 }
 /* Description section */
