--- a/src/App.css
+++ b/src/App.css
@@ -57,13 +57,15 @@ body {
 /* Main-content */
 #main-content {
   position: relative;
-  background: url("./img/info-bg.jpg") no-repeat left 24% top 30%, url("./img/info-bg3.jpg") no-repeat right 20% bottom 0;
+  background: url("./img/info-bg.jpg") no-repeat left 24% top 30%,
+    url("./img/info-bg3.jpg") no-repeat right 20% bottom 0;
   border-top: 5px solid #ee5b60;
   border-bottom: 5px solid #ee5b60;
 }
 #main-content:after {
   content: "";
-  background: url("./img/left-side-frame.jpg") no-repeat left, url("./img/right-side-frame.jpg") no-repeat right;
+  background: url("./img/left-side-frame.jpg") no-repeat left,
+    url("./img/right-side-frame.jpg") no-repeat right;
   /* background-size: 16%; */
   opacity: 0.3;
   top: 0;
@@ -99,7 +101,8 @@ body {
   margin-top: 50px;
   border: 1px solid #ccc;
   padding: 1rem;
-  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.12), 0 1px 5px 0 rgba(0, 0, 0, 0.2);
+  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.12),
+    0 1px 5px 0 rgba(0, 0, 0, 0.2);
 }
 
 img {
@@ -136,8 +139,6 @@ td {
   border: none !important;
   background: none !important;
   font: inherit !important;
-}
-input {
   height: initial !important;
 }
 
@@ -162,6 +163,7 @@ table.score td {
   background: none !important;
   font-family: inherit !important;
   font-size: 1rem !important;
+  height: initial !important;
 }
 .ability-input:focus {
   outline: none;
@@ -179,6 +181,7 @@ input[type="number"]::-webkit-outer-spin-button {
   padding: 0;
   background: unset;
   border: none;
+  vertical-align: middle;
 }
 .plus:focus,
 .minus:focus {
@@ -192,4 +195,36 @@ input[type="number"]::-webkit-outer-spin-button {
 
 .minus-icon {
   visibility: hidden;
+}
+/* Description */
+.avatar {
+  display: inline-block;
+  width: 70px;
+  height: 70px;
+  cursor: pointer;
+  position: relative;
+}
+.avatar img {
+  filter: blur(2px);
+}
+.img-icon {
+  filter: unset;
+  color: #50df55;
+  position: absolute;
+  top: 55%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 3rem;
+  font-weight: bold;
+}
+#modal1.modal {
+  width: 40%;
+  margin: 100px auto;
+  top: -8% !important;
+  max-height: 100%;
+}
+@media (max-width: 1150px) {
+  #modal1.modal {
+    width: 70%;
+  }
 }
