--- a/src/App.css
+++ b/src/App.css
@@ -108,6 +108,8 @@ body {
 img {
   width: 100%;
 }
+.tabs {
+}
 /* Description section */
 .description {
   padding: 1rem;
@@ -227,4 +229,17 @@ input[type="number"]::-webkit-outer-spin-button {
   #modal1.modal {
     width: 70%;
   }
+}
+
+/* Equipment */
+.ch-equipment label {
+  color: #000;
+}
+.main-weapon,
+.secondary-weapon,
+.potions,
+.other-stuff {
+  display: inline-block;
+  width: 49%;
+  margin-bottom: 2rem;
 }
