--- a/src/App.css
+++ b/src/App.css
@@ -267,14 +267,16 @@ input[type="number"]::-webkit-outer-spin-button {
 }
 .avatar .main-avatar {
   filter: blur(2px);
+  width: 70px;
+  position: absolute;
 }
+
 .img-icon {
   filter: unset;
   color: #50df55;
   position: absolute;
-  top: 55%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  top: 12px;
+  left: 24px;
   font-size: 3rem;
   font-weight: bold;
 }
@@ -354,6 +356,9 @@ input[type="number"]::-webkit-outer-spin-button {
   background: #fffefe;
   padding: 1rem 0;
   margin: 0rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 #character-sheet .avatar {
   cursor: auto;
@@ -475,4 +480,18 @@ input[type="number"]::-webkit-outer-spin-button {
 .tab-container div div {
   border-bottom-left-radius: 15px;
   border-bottom-right-radius: 15px;
+}
+
+/* Delete button */
+#delete-btn {
+  padding: 20px;
+  background: #ee6e73;
+  border: none;
+  border-radius: 15px;
+  font-size: 16px;
+  color: #fff;
+  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.596), 1px 0 1px rgba(0, 0, 0, 0.596), 0 0 2px #000000;
+  box-shadow: 0 -2px 2px 0 rgba(0, 0, 0, 0.14), 0 -3px 1px -2px rgba(0, 0, 0, 0.12),
+    0 -1px 5px 0 rgba(0, 0, 0, 0.2);
+  cursor: pointer;
 }
